====== inet-4.x ======

2018-10-03  Levente Mészáros

	Added a new queueing package which replaces the old queue package. This new
	package comes with a different API and a lot of new components. All old queue
	components were either ported or completely replaced with components of the new
	queueing package.

	Added new NED simple modules: OrdinalBasedDropper, PacketFilter, RateLimiter and RedDropper.