@@ -7,4 +7,5 @@
 	components were either ported or completely replaced with components of the new
 	queueing package.
 
-	Added new NED simple modules: OrdinalBasedDropper, PacketFilter, RateLimiter and RedDropper.
+	Added new NED simple modules: OrdinalBasedDropper, PacketFilter, RateLimiter,
+	ContentBasedDropper, and RedDropper.
